--- a/token/Cargo.toml
+++ b/token/Cargo.toml
@@ -5,7 +5,11 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
+
+[features]
+default = []
+testutils = ["soroban-sdk/testutils"]
 
 [dependencies]
 soroban-sdk = { version = "20.0.0-rc1" }
